MyProjects/_experiments/ExampleProject/build_error.txt
arm-none-eabi-g++ -c -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -DUSE_HAL_DRIVER -DSTM32H750xx -DHSE_VALUE=16000000  -DCORE_CM7 -DSTM32H750IB -DARM_MATH_CM7 -DUSE_FULL_LL_DRIVER -DDAISY_FIELD -include stm32h7xx.h -I../../libDaisy -I../../libDaisy/src/ -I../../libDaisy/src/sys -I../../libDaisy/src/usbd -I../../libDaisy/src/usbh -I../../libDaisy/Drivers/CMSIS/Include/ -I../../libDaisy/Drivers/CMSIS/DSP/Include -I../../libDaisy/Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../../libDaisy/Drivers/STM32H7xx_HAL_Driver/Inc/ -I../../libDaisy/Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../../libDaisy/Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../../libDaisy/Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Inc -I../../libDaisy/core/ -I../../DaisySP/Source -I../../libDaisy/Middlewares/Third_Party/FatFs/src -O2 -Wall -Wno-missing-attributes -fasm -fdata-sections -ffunction-sections -Wno-stringop-overflow -g -ggdb -MMD -MP -MF"build/ParticleOsc.d" -fno-exceptions -fasm -finline -finline-functions-called-once -fshort-enums -fno-move-loop-invariants -fno-unwind-tables -fno-rtti -Wno-register -std=gnu++14 -Wa,-a,-ad,-alms=build/ParticleOsc.lst ParticleOsc.cpp -o build/ParticleOsc.o
ParticleOsc.cpp:30:1: error: 'MoogLadder' does not name a type
   30 | MoogLadder filt;
      | ^~~~~~~~~~
ParticleOsc.cpp: In function 'void AudioCallback(daisy::AudioHandle::InputBuffer, daisy::AudioHandle::OutputBuffer, size_t)':
ParticleOsc.cpp:99:5: error: 'filt' was not declared in this scope
   99 |     filt.SetFreq(cutoffHz);
      |     ^~~~
ParticleOsc.cpp: In function 'int main()':
ParticleOsc.cpp:140:5: error: 'filt' was not declared in this scope
  140 |     filt.Init(sample_rate);
      |     ^~~~
make: *** [../../libDaisy/core/Makefile:285: build/ParticleOsc.o] Error 1
